[package]
name = "fibonacii-heap"
version = "0.1.2"
edition = "2021"
description = "Priority queue implemeted using a Fibonacii Heap"
repository = "https://github.com/conradludgate/fibonacii-heap"
keywords = ["algorithms", "data-structures", "priority-queue"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[[bench]]
name = "time_complexity"
harness = false
